@@ -22,6 +22,9 @@ eZ Online Editor MCE extension Changelog
 * use span tags internally for embed-inline tags so they are truly inline
 * properly serialize from checkbox form values to attribute values and back
 * Fixed bug #013116: malformatted separator tag
+* Fixed bug #013105: Adding a custom tag first locks cursor in the tag
+  (also fixed on embed tags)
+* Fixed related files in upload dialog not selectable
 
 5.0Beta2
 * Added debug as text comment in ajax view's (embed_view, expand, load and search)
